yaml-examples/hrconvert2/hrconvert2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrconvert2
  namespace: default
spec:
  selector:
    app: hrconvert2
  ports:
  - name: web
    port: 80
    targetPort: 80
