yaml-examples/hrconvert2/hrconvert2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrconvert2
spec:
  rules:
  - host: hrconvert2.lan
    http:
      paths:
      - backend:
          service:
            name: hrconvert2
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
